examples/test/testpolicy3745.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3745
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key21: value19
      key38: value23
      key42: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value30
          key43: value5
          key6: value35
      podSelector:
        matchLabels:
          key26: value8
